--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h4>Add a todo</h4>
           </div>
           <div class="App-body">
-            <form>
+            <form id="input">
               <input
                 type="text"
                 id="input-title"
